Fixed display issues on mobile.

--- a/NewStyle.css
+++ b/NewStyle.css
@@ -1,12 +1,12 @@
 html {
-    font-size: 35px;
+    font-size: 16px;
 }
 body {
     margin: 0;
     font-family: sans-serif;
     color: #333533;
     background-color: #F5F0F6;
-    font-size: 40px;
+    font-size: 16px;
 }
 
 #main-container {
@@ -18,7 +18,7 @@ body {
 header{
     background-color: #223843;
     color: #CFDBD5;
-    padding: 1em;
+    padding: 1rem;
     border-bottom-color: #F5CB5C;
     border-bottom-style: solid;
     border-bottom-width: 5px;
@@ -33,7 +33,7 @@ footer {
     display: flex;
     align-content: center;
     justify-content: center;
-    padding: 2em;
+    padding: 1rem;
 }
 #content {
     flex-grow: 1;
@@ -99,8 +99,8 @@ input, button {
 /* IMAGE STYLES */
 [type=radio] + img {
     cursor: pointer;
-    max-height: 200px;
-    max-width: 200px;
+    max-width: 20vw;
+    max-height: 20vw;
 }
 
 /* CHECKED STYLES */
@@ -157,12 +157,6 @@ p{
 }
 
 @media screen and (min-width:751px) {
-    html {
-        font-size: 16px;
-    }
-    body {
-        font-size: 16px;
-    }
 
     .header {
         max-width: 40%;
